[package]
name = "nova"
description = "Macro to derive newtypes with support for serde and sqlx."
version = "0.4.0"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/nova"

[dependencies]
nova-macro = { version = "=0.3.2", path = "macro" }

[workspace]
members = [".", "impl", "macro"]
default-members = [".", "impl"]

