[package]
name = "nova"
description = "Macro to derive newtypes with support for serde and sqlx."
version = "0.5.4"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/nova"

[dependencies]
nova-macro = { version = "=0.5.4", path = "macro" }

[workspace]
members = [".", "impl", "macro"]
default-members = [".", "impl"]

[workspace.dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20.10"
