[package]
name = "nova-impl"
description = "Implementation for nova crate."
version = "0.5.4"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/nova"

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true
